--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.8
+  confetti: ^0.7.0
+  lottie: ^2.7.0
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +63,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/animations/error_brain.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
